[package]
name = "toke-runner"
description = "A command runner for toml files"
repository = "https://github.com/afonsofrancof/toke"
readme = "README.md"
keywords = ["cli", "toml", "command", "runner", "toke"]
categories = ["command-line-utilities", "development-tools"]
version = "0.1.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "toke"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
regex = "1.10.3"
toml = "0.8.10"
